# NailSense

./: .gitignore  README.md  pyproject.toml
docs/: CHANNEL_MAP.md  SERIAL_PROTOCOL.md
firmware/NailSense-2CH/: NailSense-2CH.ino
firmware/NailSense-6CH/: NailSense-6CH.ino
src/nail_sensor_streaming/: __init__.py  cli.py  protocol.py
src/nailsense/: __init__.py  cli.py  protocol.py
tests/: test_protocol.py
web/2-sensor/: index.html
web/6-sensor/: index.html
web/NailSense-2CH/: index.html
web/NailSense-6CH/: index.html
