[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nail-sensor-streaming"
version = "0.1.0"
description = "Serial streaming, live plotting, and CSV recording for the UIUC nail sensors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
nail-stream = "nail_sensor_streaming.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
