[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nailsense"
version = "0.1.0"
description = "CSV recording tools for NailSense sensors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
nailsense = "nailsense.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
